Fixed navbar not showing on mobile

--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -43,7 +43,6 @@ li a {
 
 @media screen and (max-width: 480px) {
   #topnavbar {
-    position: fixed;
     width: 100%;
   }
 
